desenvolvimento e teste da api cliente.
