# src/main/resources/swagger.yaml
@@ -5,7 +5,7 @@ schemes:
   - https
 
 host: localhost:8085
-basePath: api/bytebank/v1
+basePath: /api/bytebank/v1
 
 info:
   version: 1.0.0
@@ -36,7 +36,7 @@ tags:
   - name: Transacao
 
 paths:
-  '/cliente':
+  '/clientes':
     post:
       tags:
         - Cliente
